--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,8 @@
         <item name="player1">test</item>
         <item name="player2">test2</item>
     </string-array>
+    <string-array name="teamList">
+
+    </string-array>
     <string name="action_settings">Settings</string>
 </resources>
